--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on:
   push:
   pull_request:
 
+env:
+  cache-version: v1
+
 jobs:
   pytest:
     name: Run tests with pytest
@@ -20,6 +23,15 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+
+      - name: Cache pip
+        uses: actions/cache@v1.0.0
+        with:
+          path: ~/.cache/pip
+          key: ${{ env.cache-version }}-${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            $ {{ env.cache-version }}-${{ runner.os }}-pip-
+
         
       # pip そのものをインストールする
       - name: Install dependencies
